# ZenSepiol

./: .gitignore  README.md  STL Overview.drawio  STL.drawio  Sequenced Containers.drawio
1/: program
2/: main.cpp  my_program
3/: line.cpp  line.h  main.cpp  my_program
5/: main.cpp  shape.cpp
6/: main.cpp
7/: correct_class.h
Tutorials/7 RAII/: leaky_class.h
buildsystems/15_cmake/complex/: CMakeLists.txt  line.cpp
buildsystems/15_cmake/simple/: CMakeLists.txt
buildsystems/17_bazel/complex/: .bazelrc  BUILD  line.h
buildsystems/17_bazel/simple/: BUILD
buildsystems/22_meson/complex/: line.cpp  meson.build  shape.cpp
buildsystems/22_meson/simple/: meson.build
buildsystems/8_make/complex/: line.cpp  main.cpp  makefile  shape.cpp  shape.h
buildsystems/8_make/simple/: makefile  makefile2.mk
buildsystems/9_scons/complex/: SConstruct  main.scons  shape.cpp
buildsystems/9_scons/simple/: SConstruct
canvas/vid62/: package-lock.json  package.json
canvas/vid62/src/scenes/: example.tsx
canvas/vid66/: package-lock.json  package.json  tsconfig.json
canvas/vid66/src/: project.ts
canvas/vid66/src/scenes/: one.tsx  two.tsx
programs/app_framework/: app.hpp  app_design.hpp  main.cpp  meson.build
programs/clock/: imgui.ini  meson.build  my_app.hpp  native.build
programs/coding_interviews/: bubble_sort.cpp  fibonacci.cpp  fizz_buzz.cpp  max_value.cpp  meson.build  native.build  reverse_string.cpp
programs/connect_four/: .clang-format  main.cpp  meson.build  native.build
programs/connect_four/connect_four_game/: connect_four_game.cpp  connect_four_game.hpp  connect_four_game_test.cpp  meson.build
programs/connect_four/connect_four_main/: connect_four_main.cpp  connect_four_main.hpp
programs/connect_four/connect_four_player/: connect_four_player.cpp  connect_four_player.hpp  connect_four_player_q.cpp  connect_four_player_q.hpp  connect_four_player_random.cpp  connect_four_player_random.hpp  connect_four_player_stdin.cpp  connect_four_player_stdin.hpp
programs/inverted_pendulum/: imgui.ini  main.cpp  meson.build
programs/inverted_pendulum/inverted_pendulum/: inverted_pendulum.hpp
programs/inverted_pendulum/q_learning/: q_learning.hpp
programs/inverted_pendulum/spring/: spring.hpp
programs/multithreading/: app_base.hpp  imgui.ini  my_app.hpp
programs/random_pi/: app.hpp  imgui.ini  main.cpp  meson.build  native.build  random_pi.hpp
programs/roombot/: app.hpp  imgui.ini  main.cpp  meson.build
programs/roombot/q_learning/: q_learning.hpp
programs/roombot/room_bot/: room_bot_action.hpp  room_bot_state.hpp
programs/roombot/subprojects/: glfw.wrap
programs/sudoku/: delete_lines.py  main.cpp  meson.build  native.build
programs/sudoku/sudoku_solver/: meson.build  sudoku_solver.hpp  sudoku_solver_test.cpp
programs/template/: app.hpp  imgui.ini  main.cpp  meson.build  my_app.hpp  tetris.hpp
programs/template/limiter/: meson.build
programs/tetris/: .clang-format  app_base.hpp  imgui.ini  main.cpp  meson.build  tetris.hpp
programs/tetris/implot/: imgui_example.cpp
programs/tictactoe/: app_base.hpp  imgui.ini  meson.build  tictactoe.hpp
programs/tictactoe/limiter/: limiter.cpp  limiter.hpp  limiter_test.cpp
tools/compile_command/: meson.build  native.build
tools/compile_command/2nd_dependency/: line.cpp
tools/compile_command/dependency/: line.h
tools/compile_commands_scons/: SConstruct  main.cpp  main.scons
tools/icecream/: main.cpp
tutorials/10_function_overloading/: main  main.cpp
tutorials/13_comments/: main.cpp
tutorials/14_loops/: algorithm.hpp  classic.hpp  iterator.hpp  main.cpp  meson.build  native.build  range.hpp
tutorials/16_move/: bad_examples.hpp  forward.hpp  main.cpp  meson.build  move.hpp  r_l_values.cpp  swap.hpp
tutorials/1_getting_started/: main.cpp
tutorials/2_classes/: main.cpp
tutorials/37 - CRTP Interface/: crtp.hpp  crtp_interface.hpp  normal_interface.hpp  tricks.cpp
tutorials/37_crtp_interface/: .clang-format  a.out  main.cpp
tutorials/39_crtp_extension/: crtp_extension.hpp  main2.cpp  main_named_1.cpp  main_named_2.cpp  main_named_3.cpp  main_named_crtp.cpp  meson.build  native.build
tutorials/5_inheritance/: program
tutorials/65_gtest_meson/: meson.build  my_code.cpp  my_code.hpp  my_test.cpp
tutorials/6_pointers/: my_program
tutorials/7_raii/: at_least_no_leaks.h  main.cpp  program
tutorials/stl/: Sequenced Containers.drawio
tutorials/stl/array/: array.cpp
tutorials/stl/deque/: deque.cpp
tutorials/stl/forward_list/: forward_list.cpp
tutorials/stl/iterators/: iterators.cpp
tutorials/stl/list/: list.cpp
tutorials/stl/templates/: class_template.cpp  function_template.cpp
tutorials/stl/vector/: vector.cpp
