project('coding_interviews', 'cpp')

bubble_sort = executable('bubble_sort', 'bubble_sort.cpp')
run_target('bubble_sort_run', command : bubble_sort)

fibonacci = executable('fibonacci', 'fibonacci.cpp')
run_target('fibonacci_run', command : fibonacci)

max_value = executable('coding_interviews', 'max_value.cpp')
run_target('max_value_run', command : max_value)

fizz_buzz = executable('fizz_buzz', 'fizz_buzz.cpp')
run_target('fizz_buzz_run', command : fizz_buzz)

reverse_string = executable('reverse_string', 'reverse_string.cpp')
run_target('reverse_string_run', command : reverse_string)